# clean-python-app

./: main.py  pyproject.toml  users.db
docs/puml/: pkg.puml  seq.puml
gist/standard/: Multi-column.ipynb
src/application/dtos/: user_dto.py
src/application/use_cases/: create_user.py
src/domain/: errors.py
src/domain/entities/: user.py
src/domain/value_objects/: email.py
src/infrastructure/controllers/: user_controller.py
src/infrastructure/database/: database.py
src/infrastructure/repositories/: sqlalchemy_user_repository.py
src/interfaces/: user_repository.py
tests/application/: test_create_user.py
tests/domain/: test_user.py
