[project]
name = "clean-python-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["test_*.py",]
testpaths = ["tests",]
markers = [
    "log: marks tests as odplib log function",
    "pytest: marks tests as odplib pytest function",
]
# This tells pytest to add the 'src' directory to Python's import path
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function" # Or "module" or "session"
